trunk/Archive2/ab/668d8b2e3c44d4/output
main.cpp: In function 'int main(int, char**)':
main.cpp:5:39: error: conversion from 'int*' to non-scalar type 'std::unique_ptr<int>' requested
     std::unique_ptr<int> y = new int(1);
                                       ^
